Add google fonts and removed default margins, padding and borders

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,15 @@
-body {
+/* Google fonts import */
 
-    font-family: 'Courier New', Courier, monospace;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto+Slab:wght@300&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto Slab', serif;
+    font-weight: 300;
 }
