--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /* Google fonts import */
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto+Slab:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&effect=font-effect-3d:wght@300&family=Roboto+Slab:wght@300&display=swap');
 
 * {
     margin: 0;
@@ -24,11 +24,15 @@ h3 {
     text-transform: uppercase;
     letter-spacing: 4px;
     color: #6C896C;
+
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 #logo {
     float: left;
     font-size: 280%;
+    margin-left: 30px;
+
 }
 
 /* navigation links */
@@ -41,6 +45,8 @@ h3 {
 #menu,
 #logo {
     line-height: 75px;
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+
 }
 
 #menu li {
@@ -63,15 +69,36 @@ h3 {
 }
 
 /* hero image and cover text */
+
+#earth-heading {
+    position: relative;
+    display: inline-block;
+}
+
+#earth-pic {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50px;
+    /* Adjust the width as needed */
+    height: auto;
+    /* Maintain aspect ratio */
+
+}
+
 #hero-outer {
     height: 600px;
     width: 100%;
     overflow: hidden;
 
     position: relative;
+
+    box-shadow: 20px 0px 15px rgba(0, 0, 0, 1);
 }
 
-#cover-text, #cover-text h2 {
+#cover-text,
+#cover-text h2 {
     color: #ffffff;
 }
 
@@ -84,18 +111,21 @@ h3 {
     width: 300px;
     height: 200px;
 
-    padding-top: 40px;
-    padding-left: 10px;
+    padding-top: 30px;
+    padding-left: 15px;
+    box-sizing: border-box;
 
-    background-color: rgba(241, 109, 107, .7);
+    background-color: rgba(0, 166, 255, 0.1);
 
     bottom: 30px;
     right: 150px;
 
     position: absolute;
+
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 1);
 }
 
-#hero-image {
+#hero-img {
     height: 600px;
     width: 100%;
     background: url('../images/planet-earthfirst.avif') no-repeat center center;
@@ -134,6 +164,36 @@ li ul {
 li:hover ul {
     display: block;
 }
+
+
+/* Did you know Section */
+
+#didyouknow {
+
+    height: 600px;
+}
+
+#text-left-dyk {
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+    background-color: aqua;
+
+}
+
+#text-right-dyk {
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+    background-color: brown;
+}
+
+#img-mid-dyk {
+    width: 33%;
+    margin: 0 auto;
+background-color: greenyellow;
+}
+
 
 /* Footer Style temp. */
 
