--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,21 @@
 /* Google fonts import */
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&effect=font-effect-3d:wght@300&family=Roboto+Slab:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto+Slab:wght@300&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     border: none;
+
 }
 
 body {
 
     font-family: 'Montserrat', sans-serif;
-    font-family: 'Roboto Slab', serif;
+  
     font-weight: 300;
     color: #102010;
+    box-sizing: border-box;
 
 
 }
@@ -23,28 +25,38 @@ h2>i {
 
 }
 
-/* Headings and Logo D3AF93*/
-h1,
-h2,
-h4 {
-    font-family: 'Robot slab', sans-serif;
+/* Headings and Logo OG COLOR -> D3AF93 <- OG COLOR */
+h1, h2 {
+    font-family: 'Montserrat', 'Robot slab', sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
     color: #365577;
+    padding-top: 20px;
+}
 
-    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+
+    h4 {
+font-family: 'Montserrat', sans-serif;
+text-transform: uppercase;
+letter-spacing: 4px;
+text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+padding-top: 20px;
+
 }
 
 
 #logo {
     animation: 1s ease-out 0s 1 slideInLeft;
 
-    float: left;
+    float: none;
     font-size: 280%;
     margin-left: 30px;
 
     display: inline-block;
     text-decoration: none;
+    color: #365577;
+    
+    
 
 }
 
@@ -122,10 +134,6 @@ h4 {
     box-shadow: 20px 0px 15px rgba(0, 0, 0, 1);
 }
 
-#cover-text,
-#cover-text h2 {
-    color: #102010;
-}
 
 #cover-text {
     font-size: 130%;
@@ -260,7 +268,7 @@ li:hover ul {
 #mid-dyk-pic:hover {
     transform: scale(2) rotate(360deg);
     width: 1408px;
-    height: 834x;
+    height: 834px;
 }
 
 #mid-dyk-pic img {
@@ -331,32 +339,169 @@ hr {
     box-shadow: 5px 5px 25px rgba(0, 0, 0, .5);
 
 }
+#thumb-bg div > h2 {
+        font-family: 'Robot slab', sans-serif;
+        text-transform: uppercase;
+        letter-spacing: 4px;
+        color: rgba(250, 215, 20, 0.466);
+        padding-top: 20px;
+
+}
 
 /* Footer Style temp. */
 
 footer {
+    height: 150px;
     letter-spacing: 4px;
-    font-style: bold;
+   
     color: rgba(0, 0, 0, 1);
     font-size: medium;
     margin: 20px;
+    padding-top: 50px;
 
 }
-
 
 #footer-header {
     box-sizing: border-box;
     width: 50%;
-    border: solid #0f31f3 3px;
+    border: solid #0e0e0f 1px;
     padding: 5px;
     text-align: center;
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    max-width: 200px;
-    box-shadow: 5px 5px 25px rgba(0, 0, 0, .5);
+    max-width: 210px;
+    box-shadow: 5px 5px 25px rgba(31, 81, 255, .8);
+    letter-spacing: 22px;
 }
 
 #footer-header i {
-    font-size: 22px;
+    font-size: 160%;
+    margin: 1%;
+    padding: 5%;
+    color: rgb(56, 83, 201);
+}
+
+
+/* STYLES FOR FORM-SECTION @ SIGNUP PAGE */
+
+/* Put the form in the center bot hori and verti (height 100% viewport) */
+
+.signupform {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
+.form {
+    background-color: #ffffff;
+    width: 400px;
+    border-radius: 8px;
+    padding: 20px 40px;
+    box-shadow: 0 10px 25px rgba(121, 189, 235, 0.6);
+}
+
+.title {
+    font-size: 50px;
+    margin-bottom: 50px;
+}
+
+.inputcontainer {
+    position: relative;
+    height: 45px;
+    width: 90%;
+    margin-bottom: 16px;
+
+}
+
+.input {
+    /* STYLE FOR INPUTS */
+
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    border: 1px solid #a3bfec;
+    border-radius: 7px;
+    font-size: 16px;
+    padding: 0 20px;
+    outline: none;
+    background: none;
+    z-index: 1;
+
+}
+
+/* HIDE THE PLACEGHOLDER */
+
+::placeholder {
+    color: rgba(0, 2, 3, 0.596);
+}
+
+
+/* STYLING Text LABELS */
+
+.label {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    padding: 0 4px;
+    background-color: white;
+    color: #DADCE0;
+    font-size: 16px;
+    transition: 0.5s;
+    z-index: 0;
+
+}
+
+.submitbtn {
+    display: block;
+    margin-left: auto;
+    padding: 15px 30px;
+    border: none;
+    background-color: rgb(0, 128, 38);
+    color: white;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 30px;
+
+}
+
+.submitbtn:hover {
+    background-color: #65a0ff;
+    transform: translateY(-2px);
+
+}
+
+
+.input:focus+.label {
+    top: -7px;
+    left: 3px;
+    z-index: 10;
+    font-size: 14px;
+    font-weight: 600;
+    color: purple;
+
+}
+
+.input:focus {
+    border: 2px solid purple;
+
+}
+
+.input:not(:placeholder-shown)+label {
+
+    top: -7px;
+    left: 3px;
+    z-index: 10;
+    font-size: 14px;
+    font-weight: 600;
+}
+.signuptitle {
+   margin: 25px 50px 75px 100px;
+
 }
