--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,6 +235,7 @@ li:hover ul {
 
 }
 
+
 #mid-img-dyk {
     width: 33%;
     margin: 0 auto;
@@ -247,12 +248,13 @@ li:hover ul {
     overflow: hidden;
     max-width: 520px;
     max-height: 420px;
+
+    border-radius: 5%;
 }
 
 #mid-dyk-pic {
     width: 420px;
     height: 420px;
-    border-radius: 50%;
     border-style: solid;
     border-color: #ccc;
     border-width: 1px;
@@ -260,7 +262,7 @@ li:hover ul {
     margin: 0 auto;
     box-shadow: 5px 5px 25px rgba(0, 0, 0, .5);
     /* Adds a shadow effect */
-    transition: transform 2s ease-in-out, width 2s ease-in-out, heigt 2s ease-in-out;
+    transition: transform 2s ease-in-out, width 2s ease-in-out, height 2s ease-in-out;
     /* Adds a smooth transition effect */
 
 }
@@ -359,6 +361,7 @@ footer {
     margin: 20px;
     padding-top: 50px;
   
+    background-color: #FCFCF5;
 
 }
 
